test/function/fail/empty_argument_list.rs
#[proc::function]
fn test() -> proc::TokenStream {
    todo!()
}

fn main() {}
