test/function/fail/empty_argument_list.stderr
error: The macro function should have one argument
 --> test/function/fail/empty_argument_list.rs:2:1
  |
2 | fn test() -> proc::TokenStream {
  | ^^
